--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -42,6 +42,22 @@
             <div id="loading" class="loading hidden">
                 <div class="spinner"></div>
                 <p id="loading-text">Processing your query through the council...</p>
+                <div class="progress-stages">
+                    <div class="progress-stage">
+                        <div class="progress-number">1</div>
+                        <div class="progress-label">Answers</div>
+                    </div>
+                    <div class="progress-arrow">→</div>
+                    <div class="progress-stage">
+                        <div class="progress-number">2</div>
+                        <div class="progress-label">Reviews</div>
+                    </div>
+                    <div class="progress-arrow">→</div>
+                    <div class="progress-stage">
+                        <div class="progress-number">3</div>
+                        <div class="progress-label">Synthesis</div>
+                    </div>
+                </div>
             </div>
 
             <!-- Results Section -->
